Changed order in which we rename colum and apply datetime to it

--- a/data-prep.ipynb
+++ b/data-prep.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dd29fcb1",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dd00e8c2",
    "metadata": {},
    "outputs": [],
@@ -41,24 +41,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d4314fcf",
+   "execution_count": 5,
+   "id": "b0198f26-5f3b-47ea-b3dc-37ea350b10e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a663974170c340e4a04127c990f8cab3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MitoWidget(analysis_data_json='{\"analysisName\": \"UUID-a14e53d9-5fc4-49ca-855f-6b91b6e407ac\", \"code\": {\"imports…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# convert our date to a pandas datetime field\n",
-    "df['Date (MM-DD-YYYY)'] = pd.to_datetime(df['Date (MM-DD-YYYY)'])"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b26ff234",
+   "execution_count": 6,
+   "id": "e94e9a1a-8d14-498e-8703-f5933df97996",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Rename our date column to Date\n",
     "df.rename(columns = {'Date (MM-DD-YYYY)' : 'Date'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d4314fcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert our date to a pandas datetime field\n",
+    "df['Date'] = pd.to_datetime(df['Date'])"
    ]
   },
   {
